fixing link layout bug adding div around social link for better responsive css

--- a/app/assets/stylesheets/pages/_talents.scss
+++ b/app/assets/stylesheets/pages/_talents.scss
@@ -611,7 +611,7 @@ section.talent {
           // transform: translate(-50%, -50%);
           // content: "";
           // border: 1px solid #000;
-          height: 300px;
+          height: 450px;
           width: 300px;
           // border-radius: 90%;
           // transform: rotate(0deg);
